dev-vis-form: Minor css alignment fix to prevent fields from moving around when description box is open

--- a/web/twa-vis-platform/code/src/ui/interaction/form/field/field.module.css
+++ b/web/twa-vis-platform/code/src/ui/interaction/form/field/field.module.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: row;
   margin: 0 0.25rem 1vh;
-  align-items: center;
   flex: 45%;
 }
 
